--- a/src/app/component/application/producto/routed/admin/producto-plist-admin/producto-plist-admin.component.html
+++ b/src/app/component/application/producto/routed/admin/producto-plist-admin/producto-plist-admin.component.html
@@ -65,8 +65,7 @@
               <td>{{producto.talla}}</td>
               <td>{{producto.colores}}</td>
               <td>{{producto.genero}}</td>
-              <td>{{producto.tipoProducto}}</td>
-              <td (click)="setFilterByTipoProducto(producto.tipoProducto.id)"></td>
+              <td (click)="setFilterByTipoProducto(producto.tipoproducto.id)">{{producto.tipoproducto.id}} - {{producto.tipoproducto.nombre}}</td>
               <td>
                 <div class="btn-group "  role="group" aria-label="Herramientas">
                   <button class="btn btn-sm btn-info" [routerLink]="['/admin/producto/view',producto.id]">
