--- a/src/app/component/shared/unrouted/menu/menu.component.html
+++ b/src/app/component/shared/unrouted/menu/menu.component.html
@@ -9,7 +9,7 @@
           <li class="nav-item">
             <a class="nav-link" aria-current="page" routerLinkActive="active" routerLink="home">Home</a>
           </li>
-          <li class="nav-item" *ngIf="strTipousuario=='1'">
+          <li class="nav-item">
             <a class="nav-link" aria-current="page" routerLinkActive="active" [routerLink]="['admin/usuario/plist']">Usuario</a>
           </li>
           <li class="nav-item">
