--- a/src/app/component/application/producto/routed/admin/producto-new-admin/producto-new-admin.component.html
+++ b/src/app/component/application/producto/routed/admin/producto-new-admin/producto-new-admin.component.html
@@ -199,7 +199,7 @@
         </div>
         <div class="modal-body">
   
-          <app-tipoproducto-finder (closeEvent)="closeTiporoductoModal($event)"></app-tipoproducto-finder>
+          <app-tipoproducto-finder (closeEvent)="closeTipoproductoModal($event)"></app-tipoproducto-finder>
   
         </div>
         <div class="modal-footer">
