--- a/src/app/component/application/producto/routed/admin/producto-view-admin/producto-view-admin.component.html
+++ b/src/app/component/application/producto/routed/admin/producto-view-admin/producto-view-admin.component.html
@@ -1,1 +1,9 @@
-<p>producto-view-admin works!</p>
+<div class="container mt-5">
+    <div class="row">
+        <div class="col">
+            <h1 class="text-center mb-5">Producto View</h1>
+            <app-producto-detail-admin-unrouted [id]="id"></app-producto-detail-admin-unrouted>
+            
+        </div>
+    </div>
+  </div>
