--- a/src/app/component/application/producto/unrouted/producto-detail-admin-unrouted/producto-detail-admin-unrouted.component.html
+++ b/src/app/component/application/producto/unrouted/producto-detail-admin-unrouted/producto-detail-admin-unrouted.component.html
@@ -1,1 +1,33 @@
-<p>producto-detail-admin-unrouted works!</p>
+<table class="table table-bordered table-striped">
+    <tbody>
+
+        <tr>
+            <th class="table-bordered">ID</th>
+            <td>{{oProducto.id}}</td>
+        </tr>
+        <tr>
+            <th class="table-bordered">Precio</th>
+            <td>{{oProducto.precio}}</td>
+        </tr>
+        <tr>
+            <th class="table-bordered">Modelo</th>
+            <td>{{oProducto.modelo}}</td>
+        </tr>
+        <tr>
+            <th class="table-bordered">Talla</th>
+            <td>{{oProducto.talla}}</td>  
+        </tr>
+        <tr>
+            <th class="table-bordered">Colores</th>
+            <td>{{oProducto.colores}}</td>
+        </tr>  
+        <tr>
+            <th class="table-bordered">Genero</th>
+            <td>{{oProducto.genero}}</td>
+        </tr>
+        <tr>
+            <th class="table-bordered">Tipo Producto</th>
+            <td>{{oProducto.tipoproducto.id}}</td>
+        </tr>
+    </tbody>
+</table>
