--- a/src/app/component/application/tipoproducto/routed/admin/tipoproducto-view-admin/tipoproducto-view-admin.component.html
+++ b/src/app/component/application/tipoproducto/routed/admin/tipoproducto-view-admin/tipoproducto-view-admin.component.html
@@ -1,7 +1,10 @@
+<link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
+
 <div class="container mt-5">
     <div class="row">
         <div class="col">
-            <h1 class="text-center mb-5">🔽Vista del tipoproducto con ID {{id}}🔽</h1>
+            <h1 class="text-center mb-5">Vista Tipo Producto</h1>
             <app-tipoproducto-detail-admin-unrouted [id]="id"></app-tipoproducto-detail-admin-unrouted>
         </div>
     </div>
