--- a/src/app/component/application/tipousuario/routed/admin/tipousuario-edit-admin/tipousuario-edit-admin.component.html
+++ b/src/app/component/application/tipousuario/routed/admin/tipousuario-edit-admin/tipousuario-edit-admin.component.html
@@ -1,3 +1,6 @@
+<link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
+
 <div class="container mt-5">
   <div class="row">
     <div class="col">
