--- a/src/app/component/application/producto/routed/admin/producto-edit-admin/producto-edit-admin.component.html
+++ b/src/app/component/application/producto/routed/admin/producto-edit-admin/producto-edit-admin.component.html
@@ -159,9 +159,6 @@
               </div>
 
               <button type="submit" class="btn btn-primary" [disabled]="oForm.invalid || !oForm.dirty">Guardar</button>
-
-
-
       </form>
 
     </div>
@@ -169,6 +166,25 @@
 </div>
 
 <div class="modal fade" [id]="mimodal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-sm">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">{{modalTitle}}</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+
+        {{modalContent}}
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Cerrar</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="tipoproductomodal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
