--- a/src/app/component/application/tipoproducto/routed/admin/tipoproducto-plist-admin/tipoproducto-plist-admin.component.html
+++ b/src/app/component/application/tipoproducto/routed/admin/tipoproducto-plist-admin/tipoproducto-plist-admin.component.html
@@ -1,7 +1,10 @@
+<link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
+
 <div class="container mt-5">
     <div class="row">
       <div class="col">
-        <h1 class="text-center mb-5 text-decoration-underline">Listado de TipoProducto</h1>
+        <h1 class="text-center mb-5 text-decoration-underline">Listado de Tipo Producto</h1>
         <div class="col-md text-end d-flex justify-content-center align-items-center mb-3 ">
           <a [routerLink]="['/admin/tipoproducto/new']" class="btn btn-success mx-3">Añadir TipoProducto</a>
           <app-search-unrouted [placeHolder]="'Buscar'" (onSearch)="setFilter( $event )"></app-search-unrouted>
