--- a/src/app/component/application/usuario/routed/admin/usuario-remove-admin/usuario-remove-admin.component.html
+++ b/src/app/component/application/usuario/routed/admin/usuario-remove-admin/usuario-remove-admin.component.html
@@ -1,7 +1,10 @@
+<link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
+
 <div class="container mt-5">
     <div class="row">
         <div class="col">
-            <h1 class="text-center mb-5">🔽Borrado del usuario con id {{id}}🔽</h1>
+            <h1 class="text-center mb-5">Borrar usuario</h1>
             <app-usuario-detail-admin-unrouted [id]="id"></app-usuario-detail-admin-unrouted>
             <div class="d-grid gap-2 d-md-block mt-3 d-md-flex justify-content-md-center">
                 <div class="col-md-5 control-group text-center">
