--- a/src/app/component/application/usuario/routed/admin/usuario-view-admin-routed/usuario-view-admin-routed.component.html
+++ b/src/app/component/application/usuario/routed/admin/usuario-view-admin-routed/usuario-view-admin-routed.component.html
@@ -1,9 +1,11 @@
+<link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
+
 <div class="container mt-5">
   <div class="row">
       <div class="col">
           <h1 class="text-center mb-5">Usuario View</h1>
-          <app-usuario-detail-admin-unrouted [id]="id"></app-usuario-detail-admin-unrouted>
-          
+          <app-usuario-detail-admin-unrouted [id]="id"></app-usuario-detail-admin-unrouted>  
       </div>
   </div>
 </div>
