--- a/src/app/component/shared/routed/home/home.component.html
+++ b/src/app/component/shared/routed/home/home.component.html
@@ -1,11 +1,23 @@
-<div class="container">
-    <div class="row">
-      <div class="col">
-        <p>Welcome to SneakShop!</p>
-        <div class="container">
-          <div class="row row-cols-3">
-          </div>
-        </div>
-      </div>
+<section class="showcase">
+    <header>
+        <h2 class="logo">A NEW CONCEPT OF SHOES</h2>
+    </header>
+    <video src="https://traversymedia.com/downloads/videos/explore.mp4" muted loop autoplay></video>
+    <div class="overlay"></div>
+    <div class="text">
+        <h2>THE EPITOME</h2>
+        <h3>OF SNEAKERS</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat.</p>
+        <a href="#">LOGIN FOR MORE</a>
     </div>
-  </div>
+    <ul class="social">
+        <li><a href="#"><img src="https://i.ibb.co/x7P24fL/facebook.png"></a></li>
+        <li><a href="#"><img src="https://i.ibb.co/Wnxq2Nq/twitter.png"></a></li>
+        <li><a href="#"><img src="https://i.ibb.co/ySwtH4B/instagram.png"></a></li>
+    </ul>
+</section>
+<div class="menu">
+</div>
