--- a/src/app/component/shared/unrouted/menu/menu.component.html
+++ b/src/app/component/shared/unrouted/menu/menu.component.html
@@ -9,20 +9,18 @@
           <li class="nav-item">
             <a class="nav-link" aria-current="page" routerLinkActive="active" routerLink="home">Home</a>
           </li>
+
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" routerLinkActive="active" [routerLink]="['admin/usuario/plist']">Usuario</a>
+            <a class="nav-link" aria-current="page" routerLinkActive="active" routerLink="admin/usuario/plist">Usuarios</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" aria-current="page" routerLinkActive="active" [routerLink]="['login']">Login</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" routerLinkActive="active" [routerLink]="['/admin/tipoproducto/plist']">TipoProducto</a>
+            <a class="nav-link" aria-current="page" routerLinkActive="active" [routerLink]="['/admin/tipoproducto/plist']">Tipo Producto</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" routerLinkActive="active" [routerLink]="['/admin/tipousuario/plist']">TipoUsuario</a>
-          <!-- <li class="nav-item">
-            <a class="nav-link" aria-current="page" routerLinkActive="active" [routerLink]="['/admin/user/plist']">Usuarios</a>
-          </li> -->
+            <a class="nav-link" aria-current="page" routerLinkActive="active" [routerLink]="['/admin/tipousuario/plist']">Tipo Usuario</a>
           <li class="nav-item">
             <a class="nav-link" aria-current="page" routerLinkActive="active" [routerLink]="['/admin/producto/plist']">Productos</a>
         </ul>
