--- a/src/app/component/shared/routed/login/login.component.css
+++ b/src/app/component/shared/routed/login/login.component.css
@@ -20,7 +20,7 @@ input{
 button{
     margin-top: 50px;
     width: 100%;
-    color: #080710;
+    color: white;
     padding: 15px 0;
     font-size: 18px;
     font-weight: 600;
