--- a/src/app/component/application/producto/routed/admin/producto-plist-admin/producto-plist-admin.component.html
+++ b/src/app/component/application/producto/routed/admin/producto-plist-admin/producto-plist-admin.component.html
@@ -16,9 +16,9 @@
           <app-pagination-unrouted [nPage]="responseFromServer?.number + 1" [nTotalPages]="responseFromServer?.totalPages"
               (eePage)="setPage($event)"></app-pagination-unrouted>
         </div>
-        <div class="d-flex justify-content-end mb-2 ">
+        <!-- <div class="d-flex justify-content-end mb-2 ">
           <button class="btn btn-success" (click)="generateProducto()">Generar</button>
-        </div>
+        </div> -->
         <div class="col-md text-start">
           <h5 class="text-muted" *ngIf="strTermFilter!=''">Filtrando por {{strTermFilter}} (borrar para resetear)</h5>
           <button class="btn btn-outline-danger" *ngIf="id_tipoProductoFilter!=0" (click)="setFilterByTipoProducto(0)">
