--- a/src/app/component/shared/routed/home/home.component.css
+++ b/src/app/component/shared/routed/home/home.component.css
@@ -45,7 +45,7 @@ header .logo
 }
 .showcase
 {
-  position: absolute;
+  position: relative;
   right: 0;
   width: 100%;
   min-height: 100vh;
@@ -55,7 +55,6 @@ header .logo
   align-items: center;
   background: #111;
   transition: 0.5s;
-  z-index: 2;
 }
 .showcase.active
 {
@@ -143,6 +142,15 @@ header .logo
 {
   list-style: none;
 }
+
+.list-inline {
+  display: inline-block;
+  margin-right: 20px;
+  filter: invert(1);
+  transform: scale(0.5);
+  transition: 0.5s;
+}
+
 .social li a
 {
   display: inline-block;
@@ -200,4 +208,39 @@ header .logo
   {
     font-size: 2em;
   }
+
+  ul {
+    display: inline-grid;
+    grid-auto-flow: row;
+    grid-gap: 24px;
+    justify-items: center;
+    margin: auto;
+  }
+  
+  @media (min-width: 500px) {
+    ul {
+      grid-auto-flow: column;
+    }
+  }
+  
+  a {
+    color: white;
+    text-decoration: none;
+    box-shadow: inset 0 -1px 0 hsla(0, 0%, 100%, 0.4);
+  }
+  
+  a:hover {
+    box-shadow: inset 0 -1.2em 0 hsla(0, 0%, 100%, 0.4);
+  }
+
+   
+  div {
+    display: flex;
+    height: 100vh;
+    width: 100%;
+    background-color: #002a38;
+    line-height: 1.3;
+    font-family: Menlo, monospace;
+  }
+  
 }
