--- a/src/app/component/shared/routed/home/home.component.html
+++ b/src/app/component/shared/routed/home/home.component.html
@@ -1,8 +1,7 @@
 <section class="showcase">
     <header>
-        <h2 class="logo">A NEW CONCEPT OF SHOES</h2>
+        <h2 class="logo">LIMITED CONCEPT OF SHOES</h2>
     </header>
-    <video src="https://traversymedia.com/downloads/videos/explore.mp4" muted loop autoplay></video>
     <div class="overlay"></div>
     <div class="text">
         <h2>THE EPITOME</h2>
@@ -11,13 +10,7 @@
             tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
             quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
             consequat.</p>
-        <a href="#">LOGIN FOR MORE</a>
+        <a href="">BEGIN THE ADVENTURE</a>
     </div>
-    <ul class="social">
-        <li><a href="#"><img src="https://i.ibb.co/x7P24fL/facebook.png"></a></li>
-        <li><a href="#"><img src="https://i.ibb.co/Wnxq2Nq/twitter.png"></a></li>
-        <li><a href="#"><img src="https://i.ibb.co/ySwtH4B/instagram.png"></a></li>
-    </ul>
 </section>
-<div class="menu">
-</div>
+
