--- a/src/app/component/shared/unrouted/menu/menu.component.html
+++ b/src/app/component/shared/unrouted/menu/menu.component.html
@@ -6,23 +6,27 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item">
+          <li *ngIf="strTipousuario == 'user' || strTipousuario == 'admin'" class="nav-item">
             <a class="nav-link" aria-current="page" routerLinkActive="active" routerLink="home">Home</a>
           </li>
 
-          <li class="nav-item">
+          <li *ngIf="strTipousuario == 'admin'" class="nav-item">
             <a class="nav-link" aria-current="page" routerLinkActive="active" routerLink="admin/usuario/plist">Usuarios</a>
           </li>
-          <li class="nav-item">
+          <li *ngIf="!isLogged" class="nav-item">
             <a class="nav-link" aria-current="page" routerLinkActive="active" [routerLink]="['login']">Login</a>
           </li>
-          <li class="nav-item">
+          <li *ngIf="strTipousuario == 'admin'" class="nav-item">
             <a class="nav-link" aria-current="page" routerLinkActive="active" [routerLink]="['/admin/tipoproducto/plist']">Tipo Producto</a>
           </li>
-          <li class="nav-item">
+          <li *ngIf="strTipousuario == 'admin'" class="nav-item">
             <a class="nav-link" aria-current="page" routerLinkActive="active" [routerLink]="['/admin/tipousuario/plist']">Tipo Usuario</a>
-          <li class="nav-item">
+          <li *ngIf="strTipousuario == 'admin'" class="nav-item">
             <a class="nav-link" aria-current="page" routerLinkActive="active" [routerLink]="['/admin/producto/plist']">Productos</a>
+          </li>
+          <li *ngIf="strTipousuario == 'user'" class="nav-item">
+            <a class="nav-link" aria-current="page" routerLinkActive="active" [routerLink]="['/usuario/producto/plist']">Catálogo</a>
+          </li>
         </ul>
       </div>
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
@@ -30,7 +34,7 @@
           <li class="nav-item">
             <a class="nav-link"> <div class="usuario"></div></a>
           </li>
-          <li class="nav-item">
+          <li *ngIf="isLogged" class="nav-item">
             <a class="nav-link" aria-current="page" routerLinkActive="active" [routerLink]="['/logout']">Logout</a>
           </li>
         </ul>
