--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,17 @@
 
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 5px;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: rgb(114, 105, 105);
+    border-radius: 5px;
+  }
