--- a/src/app/component/application/tipoproducto/routed/admin/tipoproducto-plist-admin/tipoproducto-plist-admin.component.html
+++ b/src/app/component/application/tipoproducto/routed/admin/tipoproducto-plist-admin/tipoproducto-plist-admin.component.html
@@ -19,7 +19,7 @@
         <div class="col-md text-end">
           <h5 class="text-muted">Total de registros en la consulta {{responseFromServer?.totalElements}}</h5>
         </div>
-        <table class="table table-bordered table-striped table-hover">
+        <table class="table">
           <thead class="table table-sm">
             <tr>
               <th (click)="setOrder('id')" >ID
