--- a/src/app/component/shared/routed/home/home.component.html
+++ b/src/app/component/shared/routed/home/home.component.html
@@ -1,16 +1,39 @@
+<link rel="stylesheet" media="only screen and (max-width: 768px)" href="home.component.css">
+
 <section class="showcase">
     <header>
-        <h2 class="logo">LIMITED CONCEPT OF SHOES</h2>
+        <h2 class="logo">LIMITED DESIGNS OF SHOES</h2>
     </header>
     <div class="overlay"></div>
     <div class="text">
         <h2>THE EPITOME</h2>
         <h3>OF SNEAKERS</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat.</p>
-        <a href="">BEGIN THE ADVENTURE</a>
+        <p>Discover the Perfect Stride: Unleash Your Inner Athlete with Our Stylish and Innovative Footwear. 
+          Elevate Your Performance, Embrace Comfort, and Set Trends with Every Step.</p>
+        <a href="http://localhost:4200/usuario/producto/plist">BEGIN THE ADVENTURE</a>
     </div>
 </section>
-
+<div id="footer">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-3">
+          <h6></h6>
+        </div>
+        <div class="col-md-3">
+            <p>abenitosanchis@gmail.com</p>
+         </div>
+        <div class="col-md-3">
+          <p>098 436 244</p>
+        </div>
+        <div class="col-md-3">
+          <p>Premium Sneakers Soon</p>
+        </div>
+      </div>
+      <hr id="line-footer">
+      <div class="row">
+        <div id="" class="col-md-3 ">
+          <p style="color: #ddd;"> &copy; </p>
+        </div>
+      </div>
+    </div>
+  </div>
