--- a/src/app/component/application/tipoproducto/unrouted/tipoproducto-detail-admin-unrouted/tipoproducto-detail-admin-unrouted.component.html
+++ b/src/app/component/application/tipoproducto/unrouted/tipoproducto-detail-admin-unrouted/tipoproducto-detail-admin-unrouted.component.html
@@ -1,7 +1,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
 
-<table class="table table-bordered table-striped">
+<table class="table">
     <tbody>
   
         <tr>
