--- a/src/app/component/application/usuario/routed/admin/usuario-plist-admin/usuario-plist-admin.component.html
+++ b/src/app/component/application/usuario/routed/admin/usuario-plist-admin/usuario-plist-admin.component.html
@@ -28,7 +28,7 @@
       <div class="col-md text-end">
         <h5 class="text-muted">Total de registros en la consulta {{responseFromServer?.totalElements}}</h5>
       </div>
-      <table class="table table-bordered table-striped">
+      <table class="table">
         <thead>
           <tr>
             <th (click)="setOrder('id')">ID
