--- a/src/app/component/application/usuario/usuario-detail-admin-unrouted/usuario-detail-admin-unrouted.component.html
+++ b/src/app/component/application/usuario/usuario-detail-admin-unrouted/usuario-detail-admin-unrouted.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-5">
   <div class="row">
       <div class="col">
-          <table class="table table-bordered table-striped">
+          <table class="table table">
               <tbody>
                   <tr>
                       <th>ID</th>
