--- a/src/app/component/shared/routed/home/home.component.css
+++ b/src/app/component/shared/routed/home/home.component.css
@@ -20,7 +20,7 @@ header
 }
 header .logo
 {
-  color: #fff;
+  color: #E2E3E0;
   text-transform: uppercase;
   cursor: pointer;
 }
@@ -78,8 +78,7 @@ header .logo
   left: 0;
   width: 100%;
   height: 100%;
-  background: #03a9f4;
-  mix-blend-mode: overlay;
+  background: #2A4B62;
 }
 .text
 {
@@ -91,7 +90,7 @@ header .logo
 {
   font-size: 5em;
   font-weight: 800;
-  color: #fff;
+  color: #E2E3E0;
   line-height: 1em;
   text-transform: uppercase;
 }
@@ -99,7 +98,7 @@ header .logo
 {
   font-size: 4em;
   font-weight: 700;
-  color: #fff;
+  color: #E2E3E0;
   line-height: 1em;
   text-transform: uppercase;
 }
@@ -242,5 +241,24 @@ header .logo
     line-height: 1.3;
     font-family: Menlo, monospace;
   }
-  
+
+  #footer{
+    background-color: rgb(36, 39, 44);
+    margin: 10px;
+    font-size: 16px;
+    position:absolute;
+    left:-0.5%;
+    color: rgb(214, 214, 214);
+    padding: 5px;
+    width: 100vw;
+    text-align: justify;
+    justify-content: center;
+    margin-top: 30px;
+  }
+
+  #line-footer{
+    background-color: rgb(136, 136, 136);
+  }
 }
+  
+  
