--- a/src/app/component/shared/routed/login/login.component.css
+++ b/src/app/component/shared/routed/login/login.component.css
@@ -1,21 +1,50 @@
+html {
+    background-color: #56baed;
+}
+
 form * {
     font-family: 'Poppins',sans-serif;
     letter-spacing: 0.5px;
 	
 }
 
-
-input{
-    display: block;
-    height: 50px;
-    width: 100%;
-    background-color: rgba(255,255,255,0.07);
-    border-radius: 3px;
-    padding: 0 10px;
-    margin-top: 8px;
-    font-size: 14px;
-    font-weight: 300;
+cuadrado-login {
+    color: #92badd;
+    display:inline-block;
+    text-decoration: none;
+    font-weight: 400;
 }
+
+body {
+    font-family: "Poppins", sans-serif;
+    height: 100vh;
+  }
+
+input { 
+
+        background-color: #f6f6f6;
+        border: none;
+        color: #0d0d0d;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 5px;
+        width: 100%;
+        border: 2px solid #f6f6f6;
+        -webkit-transition: all 0.5s ease-in-out;
+        -moz-transition: all 0.5s ease-in-out;
+        -ms-transition: all 0.5s ease-in-out;
+        -o-transition: all 0.5s ease-in-out;
+        transition: all 0.5s ease-in-out;
+        -webkit-border-radius: 5px 5px 5px 5px;
+        border-radius: 5px 5px 5px 5px;
+}
+
+input[type=text]:placeholder {
+    color: #cccccc;
+  }
 
 button{
     margin-top: 50px;
@@ -30,19 +59,55 @@ button{
 
 form {
     height: 520px;
+    margin-top: 250px;
     width: 400px;
     background-color: rgba(255,255,255,0.13);
     position: absolute;
+    box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
     transform: translate(-50%,-50%);
     top: 50%;
     left: 50%;
     border-radius: 10px;
     backdrop-filter: blur(10px);
-    border: 2px solid rgba(255,255,255,0.1);
-    box-shadow: 0 0 40px rgba(8,7,16,0.6);
     padding: 50px 35px;
 }
 
+h4 {
+  text-align: center;
+  font-size: 16px;
+  font-weight: 600;
+  text-transform: uppercase;
+  display:inline-block;
+  margin: 40px 8px 10px 8px; 
+  color: #2a4b62;
+}
+
+.col-12 text-start {
+    margin-top: 50px;
+    margin-bottom: 20px;
+}
+
+.btn {
+    width: 100px;
+}
+
+.footer {
+    padding: 25px;
+    text-align: center;
+    -webkit-border-radius: 0 0 10px 10px;
+    border-radius: 0 0 10px 10px;
+}
+
+h3 {
+    text-align: center;
+    font-size: 16px;
+    font-weight: 600;
+    text-transform: uppercase;
+    display:inline-block;
+    color: black;
+  }
+
+  
 
 
 
