--- a/src/app/component/shared/unrouted/sneaker-info-unrouted/sneaker-info-unrouted.component.html
+++ b/src/app/component/shared/unrouted/sneaker-info-unrouted/sneaker-info-unrouted.component.html
@@ -1,3 +1,3 @@
 <div>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia ullam illo quaerat nostrum id modi ut ea inventore, unde deserunt iusto tenetur accusamus perferendis distinctio velit, sed quasi veritatis ratione!
+    A fines del siglo XVIII, la gente usaba zapatos con suela de goma llamados 'zapatillas de lona', ​​pero eran bastante ordinarios en esa época; por un lado, no había pie derecho ni pie izquierdo. Alrededor de 1892, la U.S. Rubber Company ideó unas zapatillas de deporte de goma más cómodas con la parte superior de lona, ​​llamadas Keds. En 1917, estas zapatillas comenzaron a producirse en masa.
 </div>
