--- a/src/app/component/shared/unrouted/usuario-finder/usuario-finder.component.html
+++ b/src/app/component/shared/unrouted/usuario-finder/usuario-finder.component.html
@@ -22,7 +22,7 @@
         <div class="col-md text-end">
           <h5 class="text-muted">Total de registros en la consulta {{responseFromServer?.totalElements}}</h5>
         </div>
-        <table class="table table-bordered table-striped table-hover">
+        <table class="table table">
           <thead>
             <tr>
               <th (click)="setOrder('id')">ID
